# goit_py_web_14_team_project_group_4

./: .gitignore  Dockerfile  MIT License  README.md  alembic_command.txt  authentification.py  env.example  main.py  pyproject.toml  test.db
app/conf/: config.py
app/database/: db.py  models.py
app/repository/: comment.py  photo.py  photo_Cloudinary.py  tags.py  transform_photo.py  users.py
app/routes/: auth.py  comment.py  photo.py  tags.py  transform_photo.py  users.py
app/schemas/: comment.py  photo.py  photo_tags.py  photos.py  schemas.py  tags.py  transform.py  user.py
app/services/: auth.py  authentification.py  emailtogo.py  photo.py  roles.py
database/: models.py
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 011535db1ee4_init.py  2c000f18e3d4_update_comment_model.py  3728e3636b58_change_model.py  3c2427892a3f_init.py  4342f9c6cdd3_update_image_and_qr_model.py  4430269f16ae_some_change_model.py  652f935c5823_init.py  821243dcddee_init.py  86a8e6df9122_init.py  a3e9f4225c4f_update_tag_model.py  b8d74391f2bd_init.py  c329bd3c4cac_init.py  c3876fc5b6d7_update_comment_model_1.py  d19678df9657_init.py  db4d37c9eea3_init.py  db938682cd78_init.py  df65181ea7d7_init.py  (+2 more)
repository/: comment.py
routes/: comment.py
tests/: conftest.py  test_repository_transform_photo.py  test_route_auth.py  test_route_comment.py  test_route_photo.py  test_route_tags.py  test_unit_repositoriy_user.py  test_unit_repository_comment.py  test_unit_repository_photo.py  test_unit_repository_tags.py  test_unit_repository_transform_photo.py
(+12 files in other folders)
