[tool.poetry]
name = "goit_py_web_14_team_project_group_4"
version = "0.1.0"
description = "Photo SHAKE app"
authors = ["Team lead - Валерій Рішняк, Scrum master - Viktoriia, Developers - Anton Mescheryakov, Владислав Бондаренко"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = {extras = ["standart"], version = "^0.23.2"}
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
fastapi-mail = "^1.4.1"
fastapi-limiter = "^0.1.5"
cloudinary = "^1.36.0"
psycopg2 = "^2.9.9"
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"

[tool.poetry.group.test.dependencies]
httpx = "^0.25.0"
pytest = "^7.4.3"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
